--- a/pom.xml
+++ b/pom.xml
@@ -45,5 +45,12 @@
 			<artifactId>cucumber-testng</artifactId>
 			<version>6.9.1</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
+<dependency>
+    <groupId>com.aventstack</groupId>
+    <artifactId>extentreports</artifactId>
+    <version>5.0.6</version>
+</dependency>
+		
   </dependencies>
 </project>
