--- a/test-output/old/Suite/frenchTest.properties
+++ b/test-output/old/Suite/frenchTest.properties
@@ -1,1 +1,1 @@
-[SuiteResult context=englishTest][SuiteResult context=frenchTest]
+[SuiteResult context=frenchTest][SuiteResult context=englishTest]
